--- a/create-test-shell-playbook.gcp.yml
+++ b/create-test-shell-playbook.gcp.yml
@@ -5,5 +5,5 @@
   tasks:
   - name: create vm and install docker
     command: /bin/sh './ansible/part1_create_vm.sh'
-  - name: create container
-    command: /bin/sh ./ansible/part2_create_container.sh {{ tag }}
+  #- name: create container
+  #  command: /bin/sh ./ansible/part2_create_container.sh
